--- a/localisation/english/zz_evolved_pop_mechanics_l_english.yml
+++ b/localisation/english/zz_evolved_pop_mechanics_l_english.yml
@@ -288,8 +288,6 @@ mod_leader_scientists_unity_cost_mult:0 "Scientist £unity£ Unity Recruit cost"
  trait_tec_og_sensible_desc:0 "§LThis species have a really accentuated sensible perception, being able to perceive other's perception as theirs, sometimes in a overcoming way.§!"
  TRAIT_TEC_OG_SENSIBLE_EFFECT:0 "§Ya.§!"
 
-
-
 # Regular
  trait_tec_austere:0 "Austere"
  trait_tec_austere_desc:0 "§LWhen it comes to pleasure, luxuries or general use of entertainment or generally impractical elements, this species opt for a more spartan and austere environment.§!"
@@ -663,10 +661,69 @@ mod_leader_scientists_unity_cost_mult:0 "Scientist £unity£ Unity Recruit cost"
  trait_tec_gene_will:0 "Resolved"
  trait_tec_gene_will_desc:0 "§LThis species will is greatly enhanced via genetic modification, creating a kind of special instinct allowing each individual to avoid perils and anticipate things with an incredible precision, also sharing a kind of multi-collective yet individual sense.§!"
 
-# --------------- BIOLOGICAL PERFECTION TRAITS ----------------------
+# --------------- BIOLOGICAL PATH TRAITS ----------------------
 # xenotransplantation
+ trait_tec_bio_exoskeleton:0 "Xenoskeleton"
+ trait_tec_bio_exoskeleton_desc:0 ""
+
+ trait_tec_bio_symbiotes:0 "Polyorganic Symbiotes"
+ trait_tec_bio_symbiotes_desc:0 ""
+ 
+ trait_tec_bio_overdrive:0 "Endocrinal Overdrive"
+ trait_tec_bio_overdrive_desc:0 ""
+
+ trait_tec_bio_reproduction:0 "Polyreproduction"
+ trait_tec_bio_reproduction_desc:0 ""
+
+ trait_tec_bio_appendages:0 "Exo-Appendages"
+ trait_tec_bio_appendages_desc:0 ""
+
+ trait_tec_bio_brain:0 "Cortex Germinations"
+ trait_tec_bio_brain_desc:0 ""
+
+ trait_tec_bio_unity:0 "Cellular Memory"
+ trait_tec_bio_unity_desc:0 ""
+
+ trait_tec_bio_unimind:0 "Geno-Unimind"
+ trait_tec_bio_unimind_desc:0 ""
+
+ trait_tec_bio_energy:0 "Bioelectric Synchrony"
+ trait_tec_bio_energy_desc:0 ""
+
+ trait_tec_bio_mining:0 "Excavation Instinct"
+ trait_tec_bio_mining_desc:0 ""
+
+ trait_tec_bio_farming:0 "Biomatter Affinity"
+ trait_tec_bio_farming_desc:0 ""
+
+
 
 # --------------- CYBORG ASCENSION TRAITS ----------------------
+# New cyborg
+ mod_tec_trait_cybernetic_tooltip:0 "[tec_trait_cybernetic_module_block_1][tec_trait_cybernetic_module_block_2][tec_trait_cybernetic_submodule_block_1][tec_trait_cybernetic_submodule_block_2][tec_trait_cybernetic_leader_block]"
+
+ # tec_blank
+ tec_trait_cybernetic_module_fallback:0 "Army Damage: §G+15%§!\n"
+ tec_trait_cybernetic_module_versatility:0 "$tec_loc_job_output$ per $tec_loc_capital_tier$: §G+3.5%§!\n"
+ tec_trait_cybernetic_module_research:0 "$tec_loc_research_resources$ from $tec_loc_research_jobs$ per $tec_loc_capital_tier$: §G+0.15§!\n"
+ tec_trait_cybernetic_module_industrial:0 "$tec_loc_industrial_resources$ from $tec_loc_industrial_jobs$ per $tec_loc_capital_tier$: §G+0.15§! \n"
+
+ tec_trait_cybernetic_submodule_fallback:0 "Leader Lifespan: §G+25 years§!\n"
+ tec_trait_cybernetic_submodule_lifespan:0 "$tec_trait_cybernetic_submodule_fallback$"
+ tec_trait_cybernetic_submodule_warfare:0 "Army Damage: §G+15%§!\n"
+ tec_trait_cybernetic_submodule_survival:0 "Army Health: §G+20%§!\n"
+ tec_trait_cybernetic_submodule_recycling:0 "Pop Upkeep: §G-10%§!\n"
+ tec_trait_cybernetic_submodule_construction:0 "Planetary Build Speed per Pop: §G+1%§!\n"
+ tec_trait_cybernetic_submodule_knowledge:0 "Leader Experience Gain: §G+25%§!\n"
+
+ tec_trait_cybernetic_leader_fallback:0 "§GLeaders from this species have additional traits and bonuses§!"
+ tec_trait_cybernetic_leader_versatility:0 "$tec_trait_cybernetic_leader_fallback$"
+ tec_trait_cybernetic_leader_research:0 "§GLeaders from this species have additional traits and bonuses, based around Tecnological capacities§!"
+ tec_trait_cybernetic_leader_industrial:0 "§GLeaders from this species have additional traits and bonuses, based around Industral capacities§!"
+ tec_trait_cybernetic_leader_versatility_industrial:0 "§GLeaders from this species have additional traits and bonuses§!"
+ tec_trait_cybernetic_leader_versatility_research:0 "§GLeaders from this species have additional traits and bonuses, uniting Technological and Versatile capacities§!"
+ tec_trait_cybernetic_leader_industrial_research:0 "§GLeaders from this species have additional traits and bonuses, uniting Experimental and Efficient capacities§!"
+
 # Endoskeletal implants (menial resource)
  trait_tec_cyborg_endo:0 "Reinforced Endoskeleton"
  trait_tec_cyborg_endo_desc:0 "§LAn extensive array of modifications done to the internal structure and organs of this species resulted in an ample moddability for new implants, and a overall increase in the strength, durability and capacities of it.§!"
@@ -697,7 +754,6 @@ mod_leader_scientists_unity_cost_mult:0 "Scientist £unity£ Unity Recruit cost"
  TRAIT_TEC_CYBORG_BIOIMPLANTS_EFFECT:0 "Effects amplified a with a §BCyber-Skeleton§! of any type active."
   # TRAIT_TEC_CYBORG_BIOIMPLANTS_EFFECT:0 "Pop Habitability: §G+30%§!\nLeader Lifespan: §G+50§!\n£energy£ Energy Upkeep: §R+0.2§!"
 
-
  trait_tec_cyborg_selfmaintenance:0 "Personal Retrofitters"
  trait_tec_cyborg_selfmaintenance_desc:0 "§LSmall deposits of useful repair nanodrones are distributed around the body, allowing a perfect maintenance and repair tasks of any enhancement, implant or the organic body itself.§!"
  TRAIT_TEC_CYBORG_SELFMAINTENANCE_EFFECT:0 "Effects amplified a with a §BCyber-Skeleton§! of any type active."
@@ -715,8 +771,6 @@ mod_leader_scientists_unity_cost_mult:0 "Scientist £unity£ Unity Recruit cost"
   # happiness 
  trait_tec_cyborg_fashion:0 "Aesthetic Implants"
  trait_tec_cyborg_fashion_desc:0 "§LBecause effectivity is not only the most important thing this species values, the degree of cosmetic and day-to-day use of prosthetics and appearance alterators is a common practice in their society.§!"
-
-
 
 # Intralink (unity)
  trait_tec_cyborg_intralink:0 "Cognitive Intralink"
@@ -737,8 +791,6 @@ mod_leader_scientists_unity_cost_mult:0 "Scientist £unity£ Unity Recruit cost"
  trait_tec_cyborg_badimplants_desc:0 "§LSmall deposits of useful repair nanodrones are distributed around the body, allowing a perfect maintenance and repair tasks of any enhancement, implant or the organic body itself.§!"
  TRAIT_TEC_CYBORG_BADIMPLANTS_EFFECT:0 "Effects amplified a with a §BCyber-Skeleton§! of any type active."
 
-
-
 # Alloy intraforge (forge)
  trait_tec_cyborg_alloys:0 "A"
  trait_tec_cyborg_alloys_desc:0 "§La.§!"
@@ -751,21 +803,53 @@ mod_leader_scientists_unity_cost_mult:0 "Scientist £unity£ Unity Recruit cost"
  trait_tec_cyborg_research:0 "A"
  trait_tec_cyborg_research_desc:0 "§La.§!"
 
-
-
-
 # --------------- REPLICANT ASCENSION TRAITS ----------------------
-trait_tec_replicant_standard:0 "Replicant"
-trait_tec_replicant_standard_desc:0 "§LThis species has been altered at a cellular level with advanced nanomachines that act in symbiotic relationship with organic counterparts, being a mix of both worlds and making it impervious to aging, climatic conditions and the restrictions of organic and mechanic design.§!"
+ trait_tec_replicant_standard:0 "Replicant"
+ trait_tec_replicant_standard_desc:0 "§LThis species has been altered at a cellular level with advanced nanomachines that act in symbiotic relationship with organic counterparts, being a mix of both worlds and making it impervious to aging, climatic conditions and the restrictions of organic and mechanic design.§!"
  trait_tec_replicant_standard_EFFECT:0 "£pop£ Habitability: §R+100%§!\n£pop£ Jobs production: §R+10%§!\nLeaders are §YImmortal§!.\n"
 
-trait_tec_replicant_firstgen:0 "Proto-Replicant"
-trait_tec_replicant_firstgen_desc:0 "§LThis species has been altered at a cellular level with advanced nanomachines that act in symbiotic relationship with organic counterparts, being a mix of both worlds and making it impervious to aging, climatic conditions and the restrictions of organic and mechanic design.§!"
+ trait_tec_replicant_firstgen:0 "Proto-Replicant"
+ trait_tec_replicant_firstgen_desc:0 "§LThis species has been altered at a cellular level, forming a deep biomechanical bonding where artificial cells work in symbiotic relationship with organic counterparts. However, the change made this species susceptible to rapid deterioration without constant maintenance.§!"
  TRAIT_TEC_REPLICANT_FIRSTGEN_EFFECT:0 "£pop£ Habitability: §R+100%§!\n£pop£ Jobs production: §R+10%§!\nLeaders are §YImmortal§!.\nEach year, a percentage of the pops will wither away."
 
-trait_tec_replicant_lastgen:0 "Neo-Replicant"
-trait_tec_replicant_lastgen_desc:0 "§LThis species has been altered at a cellular level with advanced nanomachines that act in symbiotic relationship with organic counterparts, being a mix of both worlds and making it impervious to aging, climatic conditions and the restrictions of organic and mechanic design.§!"
+ trait_tec_replicant_lastgen:0 "Neo-Replicant"
+ trait_tec_replicant_lastgen_desc:0 "§LThis species has completely replace their organism with high-tech nanites converting organic matter into biomechanical counterparts, creating a stable biological and synthetic fusion, becoming impervious to aging, climatic conditions and natural limits, with a exception: the impossibility of natural reproduction.§!"
  TRAIT_TEC_REPLICANT_LASTGEN_EFFECT:0 "£pop£ Habitability: §R+100%§!\n£pop£ Jobs production: §R+10%§!\nLeaders are §YImmortal§!.\n"
+
+# cyb cyb cyb
+ mod_tec_trait_replicant_tooltip:0 "[tec_trait_replicant_module_block][tec_trait_cybernetic_module_block_1][tec_trait_replicant_submodule_block][tec_trait_cybernetic_submodule_block_1]"
+
+ tec_trait_replicant_module_versatility:0 ""
+ tec_trait_replicant_module_research:0 ""
+ tec_trait_replicant_module_industrial:0 ""
+ tec_trait_replicant_submodule_mega_habitability:0 ""
+ tec_trait_replicant_submodule_medium_habitability:0 ""
+ tec_trait_replicant_submodule_amenities:0 ""
+# £mod_habitability_floor_add£
+ #tec_trait_cybernetic_module_fallback:0 "$tec_loc_job_output$ per $tec_loc_capital_tier$: §G+3.5%§!\n"
+ # tec_blank
+ #tec_trait_cybernetic_module_fallback:0 "Army Damage: §G+15%§!\n"
+ #tec_trait_cybernetic_module_versatility:0 "$tec_loc_job_output$ per $tec_loc_capital_tier$: §G+3.5%§!\n"
+ #tec_trait_cybernetic_module_research:0 "$tec_loc_research_resources$ from $tec_loc_research_jobs$ per $tec_loc_capital_tier$: §G+0.15§!\n"
+ #tec_trait_cybernetic_module_industrial:0 "$tec_loc_industrial_resources$ from $tec_loc_industrial_jobs$ per $tec_loc_capital_tier$: §G+0.15§! \n"
+
+ #tec_trait_cybernetic_submodule_fallback:0 "Leader Lifespan: §G+25 years§!\n"
+ #tec_trait_cybernetic_submodule_lifespan:0 "$tec_trait_cybernetic_submodule_fallback$"
+ #tec_trait_cybernetic_submodule_warfare:0 "Army Damage: §G+15%§!\n"
+ #tec_trait_cybernetic_submodule_survival:0 "Army Health: §G+20%§!\n"
+ #tec_trait_cybernetic_submodule_recycling:0 "Pop Upkeep: §G-10%§!\n"
+ #tec_trait_cybernetic_submodule_construction:0 "Planetary Build Speed per Pop: §G+1%§!\n"
+ #tec_trait_cybernetic_submodule_knowledge:0 "Leader Experience Gain: §G+25%§!\n"
+
+ #tec_trait_cybernetic_leader_fallback:0 "§GLeaders from this species have additional traits and bonuses§!"
+ #tec_trait_cybernetic_leader_versatility:0 "$tec_trait_cybernetic_leader_fallback$"
+ #tec_trait_cybernetic_leader_research:0 "§GLeaders from this species have additional traits and bonuses, based around Tecnological capacities§!"
+ #tec_trait_cybernetic_leader_industrial:0 "§GLeaders from this species have additional traits and bonuses, based around Industral capacities§!"
+ #tec_trait_cybernetic_leader_versatility_industrial:0 "§GLeaders from this species have additional traits and bonuses§!"
+ #tec_trait_cybernetic_leader_versatility_research:0 "§GLeaders from this species have additional traits and bonuses, uniting Technological and Versatile capacities§!"
+ #tec_trait_cybernetic_leader_industrial_research:0 "§GLeaders from this species have additional traits and bonuses, uniting Experimental and Efficient capacities§!"
+# /
+
 
   # Basic traits
 trait_tec_replicant_lithoid:0 "Nano-Silicoid"
@@ -1576,7 +1660,7 @@ TRAIT_SYMBIOTIC_EFFECT:0 "$MOD_POP_HAPPINESS$: §G+20%§!\n$MOD_LEADER_SKILL_LEV
 # Events here
 
 tec_aiauth:0 "Choose the "
-tec_aiauth_available_programs:0 "Max available programs: "
+tec_aiauth_available_programs:0 "Max available programs:0 "
 tec_aiauth_main_bonus:0 "Max available programs: §Y[root.tec_max_aiauth_programs]§!"
 tec_aiauth_used_bonus:0 "Used programs slots: §Y[root.tec_aiauth_used_programs]§!"
 tec_aiauth_main_bonus:0 "Available program slots: §Y[root.tec_aiauth_stored_programs]§!"
