--- a/localisation/english/zz_evolved_cui_l_english.yml
+++ b/localisation/english/zz_evolved_cui_l_english.yml
@@ -47,13 +47,13 @@
  tec_loc_research_resources:0 "£trigger_tec_research£ §YResearch§!" 
 
  tec_loc_industrial_jobs:0 "£job_foundry£ £job_artisan£ Industrial Jobs"
- tec_loc_research_jobs:0 "£job_researcher£ [owner.GetResearcherPlural]"
- tec_loc_unity_jobs:0 "[owner.GetAdministratorPluralWithIcon]"
+ tec_loc_research_jobs:0 "$mod_base_planet_researchers$"
+ tec_loc_unity_jobs:0 "$mod_base_planet_administrators$"
 
- tec_loc_job_output: "£job£ §YOutput§!"
+ tec_loc_job_output: "$planet_jobs_produces_mult$"
 
  tec_loc_habitability: "£mod_habitability_floor_add£ Habitability"
- tec_loc_capital_tier: "£building£ Capital tier"
+ tec_loc_capital_tier: "£building£ Capital Tier"
 
  tec_loc_cannot reproduce: "§RCannot Reproduce Naturally§!"
 
