--- a/localisation/english/zz_evolved_pop_mechanics_l_english.yml
+++ b/localisation/english/zz_evolved_pop_mechanics_l_english.yml
@@ -12,10 +12,10 @@
  POP_ATTRACTION_INDUSTRIOUS_POS:0 "§G+ Industrious Pops in Empire§!"
  POP_ATTRACTION_ENGINEERS_POS:0 "§G+ Engineers Pops in Empire§!"
  POP_ATTRACTION_AGRARIAN_NEG:0 "§G- Agrarian Pops in Empire§!" 
- POP_ATTRACTION_PLANNED_ECONOMY_POS:0 "§G+ Planned economy is implemented in Empire§!"
- POP_ATTRACTION_FREE_MARKET_NEG:0 "§G- Free Market economy is implemented in Empire§!"
- POP_ATTRACTION_PLANNED_ECONOMY_NEG:0 "§G- Planned economy is implemented in Empire§!"
- POP_ATTRACTION_FREE_MARKET_POS:0 "§G+ Free Market economy is implemented in Empire§!" 
+ POP_ATTRACTION_PLANNED_ECONOMY_POS:0 "§G+ Planned Economy is implemented in Empire§!"
+ POP_ATTRACTION_FREE_MARKET_NEG:0 "§G- Free Market Economy is implemented in Empire§!"
+ POP_ATTRACTION_PLANNED_ECONOMY_NEG:0 "§G- Planned Economy is implemented in Empire§!"
+ POP_ATTRACTION_FREE_MARKET_POS:0 "§G+ Free Market Economy is implemented in Empire§!" 
  POP_ATTRACTION_LEADER_ENHANCE_POS:0 "§G+ Unnatural Leader Enhancement is allowed in Empire§!"
  POP_ATTRACTION_OLIGARCH_GOV_POS:0 "§G+ Oligarchic Government§!"
  POP_ATTRACTION_CONFORMISTS_POS:0 "§G+ Conformists Pops in Empire§!"
@@ -77,9 +77,6 @@ mod_pop_ethic_socialism_attraction_mult:0 "Cooperative Ethics Attraction"
 mod_pop_ethic_elitist_attraction_mult:0 "Elitist Ethics Attraction"
 mod_pop_ethic_pluralist_attraction_mult:0 "Egalitarian Ethics Attraction" 
 mod_pop_ethic_egalitarian_attraction_mult:0 "Liberal Ethics Attraction"
-
- mod_pop_category_robot_upkeep_mult:0 "Robotic population Upkeep"
- mod_pop_category_robot_produces_mult:0 "Robotic population Output"
 
  BIOSERVANTS_CANNOT_COLONIZE:0 "$TRIGGER_FAIL$ The £society_research£ §Y$tech_tec_bioservant_2$§! technology is required to colonize with Bioservants."
 
@@ -422,26 +419,26 @@ mod_leader_scientists_unity_cost_mult:0 "Scientist £unity£ Unity Recruit cost"
 # Origin
  trait_tec_robot_liquid_origin:0 "Arcane Synthetic Dermis"
  trait_tec_robot_liquid_origin_desc:0 "§LThese machine units are made with a really advanced material with a mollecular structure that allows it to ''flow'' and rearrange itself, no matter what damage or instability is caused upon, even when detached at a atomic level.\nReplicating its complexity and strange qualities, and fixing its flaws, is impossible as the knowledge for making such technology is lost in time, but assembly techniques are maintained.§!\n"
- TRAIT_tec_robot_LIQUID_ORIGIN_EFFECT:0 "Robot £pop£ pop £liquid_metal£ Liquid Metal Upkeep: §R+0.05§!"
+ TRAIT_tec_robot_LIQUID_ORIGIN_EFFECT:0 "$mod_planet_pops_robotics_sr_living_metal_upkeep_add$: §R+0.05§!"
 
 
 
 # rare
  trait_tec_machine_biomass:0 "Biomass Converters"
  trait_tec_machine_biomass_desc:0 "§LIntegrated as a energy reprocessor, these units have a refuel system able to consume via nanorrobotics any organic matter around in case of energy shortage or just nominal recharge.§!\n"
- TRAIT_TEC_BIOMASS_EFFECT:0 "Robot £pop£ pop £food£ Food Upkeep: §R+0.5§!\nRobot £pop£ pop £energy£ Energy Upkeep: §G-0.5§!\nRobot Upkeep: §G-10%§!"
+ TRAIT_TEC_BIOMASS_EFFECT:0 "$mod_planet_pops_robotics_food_upkeep_add$: §R+0.5§!\n$mod_planet_pops_robotics_energy_upkeep_add$: §G-0.5§!"
 
  trait_tec_machine_biobrain:0 "Organic Processor"
  trait_tec_machine_biobrain_desc:0 "§LThese artificial units somehow have an organic brain as their main processor. The cost of nurturing and maintaining organic tissue is a great inconvenience but it provides great benefits in both the long and short term.§!\n"
- TRAIT_TEC_BIOBRAIN_EFFECT:0 "Robot £pop£ pop £food£ Food Upkeep: §R+0.5§!\nRobot output: §G+5%§!"
+ TRAIT_TEC_BIOBRAIN_EFFECT:0 "$mod_planet_pops_robotics_food_upkeep_add$: §R+0.5§!"
 
  trait_tec_machine_clockwork:0 "Clockwork Body"
  trait_tec_machine_clockwork_desc:0 "§LThese machines are composed internally of a myriad of kinetic miniaturized clockwork systems, feeding a complex structure that amplifies the workflow and creates a network of energy-saving mechanics for single interfaces; even with the complexity of these systems, their movements seems laggy or extremely paced.§!\n"
- TRAIT_TEC_CLOCKWORK_EFFECT:0 "Robot £pop£ pop £minerals£ Minerals Upkeep: §R+0.5§!\nRobot £pop£ pop £energy£ Energy Upkeep: §G-0.75§!"
+ TRAIT_TEC_CLOCKWORK_EFFECT:0 "$mod_planet_pops_robotics_minerals_upkeep_add$: §R+0.5§!\n$mod_planet_pops_robotics_energy_upkeep_add$: §G-0.75§!"
 
  trait_tec_machine_aquatic:0 "Nautical Design"
  trait_tec_machine_aquatic_desc:0 "§LSeveral specific adaptations are integrated on the design of these machine units to operate efficiently on an underwater or highly humid environment.§!\n"
- TRAIT_TEC_MACHINE_AQUATIC_EFFECT:0 "Robot £pop£ output on §YWet§! worlds: §G+10%§!\nAmenities usage on §YOcean§! worlds: §G-10%§!\nHabitability on non-§YWet§! worlds: §R-125%§!\nHull Strength from admirals: §G+10%§!\n"
+ TRAIT_TEC_MACHINE_AQUATIC_EFFECT:0 "$mod_planet_jobs_robotic_produces_mult$ on §YOcean§! Worlds: §G+5%§!\n$MOD_POP_AMENITIES_USAGE_MULT$ on §YOcean§! worlds: §G-10%§!\n$mod_pop_environment_tolerance$ on non-§YWet§! Worlds: §R-120%§!\nThis trait supports PD §YOceanic§! Worlds\n\nThe §H$ap_hydrocentric$§! Ascension Perk amplifies this trait's effects."
 
 # New
  
@@ -453,7 +450,7 @@ mod_leader_scientists_unity_cost_mult:0 "Scientist £unity£ Unity Recruit cost"
 # ------------------------------------------------------------
  trait_tec_pu_neuroslug:0 "Neuro-Symbiote"
  trait_tec_pu_neuroslug_desc:0 "§LThis species has a symbiotic relation with a parasite, which greatly improves each member at a high metabolic cost.§!\n"
- TRAIT_TEC_PU_NEUROSLUG_EFFECT:0 "\nIncreases the £trigger_tec_basic_resources£ §YBasic Resources§! upkeep of the species by §R0.5§!."
+ TRAIT_TEC_PU_NEUROSLUG_EFFECT:0 "$mod_planet_pops_all_basic_upkeep_add$: §R+0.5§!"
 
  leader_trait_admiral_tec_pu_neuroslug:0 "$trait_tec_pu_neuroslug$"
  leader_trait_admiral_tec_pu_neuroslug_desc:0 "§LThis leader has a special connection with the Neuro-Symbiote for subspace fleet command.§!"
@@ -543,7 +540,8 @@ mod_leader_scientists_unity_cost_mult:0 "Scientist £unity£ Unity Recruit cost"
 
  trait_tec_hyperthermophilic:0 "Hyperthermophile"
  trait_tec_hyperthermophilic_desc:0 "§LWith the ability to lose heat and cool down quickly, retain high amounts of necessary hydratation and protection against solar rays, this species is able to survive in the harsher warm climates.§!"
- TRAIT_TEC_HYPERTHERMOPHILIC_EFFECT:0 "On §HWarm§! planets, habitability increased by §G20%§! and upkeep reduced by §G20%§!.\n\nEffects inverted on §HCold§! planets, and increased for §EReptilian§! species by §Y50%§!."
+ TRAIT_TEC_HYPERTHERMOPHILIC_EFFECT:0 "$mod_pop_environment_tolerance$ on §HWarm§! Worlds: §G+20%§!\n
+$mod_planet_pops_upkeep_mult$ on §HWarm§! Worlds: §G-20%§!.\n\nEffects inverted on §HCold§! planets, and increased for §EReptilian§! species by §Y50%§!."
 
 
 
@@ -552,7 +550,8 @@ mod_leader_scientists_unity_cost_mult:0 "Scientist £unity£ Unity Recruit cost"
  #trait_mam_fur_desc:0 "§LThis species has developed a thick fur and fat layer over its skin, being extremely protective for extreme temperatures.§!"
  trait_tec_cryophilic:0 "Cryophilic Hibernation"
  trait_tec_cryophilic_desc:0 "§LThanks to diverse evolutionary advantages, this species is able to thrive in extreme low-temperature environments, forcing a semi-stasis on colder seasons.§!"
- TRAIT_TEC_CRYOPHILIC_EFFECT:0 "On §BCold§! planets, habitability increased by §G20%§! and production increased by §G5%§!.\nDuring the last 3 month of each year, this species will produce §Y-10%§! less.\n\nEffects increased for §EMammalian§! species by §Y50%§!."
+ TRAIT_TEC_CRYOPHILIC_EFFECT:0 "$mod_pop_environment_tolerance$ on §BCold§! Worlds: §G+20%§!\n
+$mod_planet_jobs_produces_mult$ on §BCold§! Worlds: §G+5%§!\nDuring the last 3 month of each year, this species will produce §Y-10%§! less.\n\nEffects increased for §EMammalian§! species by §Y50%§!."
 
  trait_mam_social:0 "A"
  trait_mam_social_desc:0 "§La.§!"
@@ -562,7 +561,8 @@ mod_leader_scientists_unity_cost_mult:0 "Scientist £unity£ Unity Recruit cost"
  #trait_rep_skin_desc:0 "§LThe scaly surface of the skin of this species radically alters at some periods of its member's life, allowing the growth of a new and adaptive layer of protection.§!"
  trait_tec_hyperthermophilic:0 "Hyperthermophile"
  trait_tec_hyperthermophilic_desc:0 "§LWith the ability to lose heat and cool down quickly, retain high amounts of necessary hydratation and protection against solar rays, this species is able to survive in the harsher warm climates.§!"
- TRAIT_TEC_HYPERTHERMOPHILIC_EFFECT:0 "On §HWarm§! planets, habitability increased by §G20%§! and upkeep reduced by §G20%§!.\n\nEffects inverted on §HCold§! planets, and increased for §EReptilian§! species by §Y50%§!."
+ TRAIT_TEC_HYPERTHERMOPHILIC_EFFECT:0 "$mod_pop_environment_tolerance$ on §HWarm§! Worlds: §G+20%§!\n
+$mod_planet_pops_upkeep_mult$ on §HWarm§! Worlds: §G-20%§!.\n\nEffects inverted on §HCold§! planets, and increased for §EReptilian§! species by §Y50%§!."
 
 
  trait_rep_social:0 "A"
@@ -571,7 +571,7 @@ mod_leader_scientists_unity_cost_mult:0 "Scientist £unity£ Unity Recruit cost"
 # Arthropod
  trait_tec_metamorphosis:0 "Metamorphosis"
  trait_tec_metamorphosis_desc:0 "§LThis species suffers radical physical and functional transformations from a larval stage to adulthood.§!"
- TRAIT_TEC_METAMORPHOSIS_EFFECT:0 "Each §Y10 years§! from being created, this species pops change phases in the following order:\n- §WLarval§!: §R+10%§! pop upkeep and amenities usage.\n- §WJuvenile§!: §G+5%§! basic production and §R+5%§! pop upkeep.\n- §WMature§!: §G+5%§! pop output.\n\nEffects increased for §EArthropoid§! species by §Y50%§!."
+ TRAIT_TEC_METAMORPHOSIS_EFFECT:0 "Each §Y10 years§! from being created, this species pops change phases in the following order:\n- §WLarval§!\n  - $mod_planet_pops_upkeep_mult$: §R+10%§!\n  - $MOD_POP_AMENITIES_USAGE_MULT$: §R+10%§!\n- §WJuvenile§!\n  - $mod_planet_jobs_all_basic_produces_mult$: §G+5%§!\n  - $mod_planet_pops_upkeep_mult$: §R+5%§!\n- §WMature§!\n  - $mod_planet_jobs_produces_mult$: §G+5%§!\n\nEffects increased for §EArthropoid§! species by §Y50%§!."
 
 
  trait_art_social:0 "A"
@@ -582,7 +582,7 @@ mod_leader_scientists_unity_cost_mult:0 "Scientist £unity£ Unity Recruit cost"
  #trait_mol_shell_desc:0 "§LA thick layer of solid material encases some parts or the whole body of this species, making a excellent defensive barrier against attackers, making every member a kind of slow mobile fortress.§!"
  trait_tec_siliceous:0 "Siliceous Molt"
  trait_tec_siliceous_desc:0 "§LBy chemical processing of inert material, this species segregate hardened mineral substances used for different ways of protection or general corporeal composition.§!"
- TRAIT_TEC_SILICEOUS_EFFECT:0 "Each pop generates £minerals£ §Y0.15§! Minerals.\n\n§EMolluscoid§! species also gain §Y+15%§! Defense Army Health."
+ TRAIT_TEC_SILICEOUS_EFFECT:0 "$mod_planet_pops_minerals_produces_add$: §G+0.15§!\n\n§EMolluscoid§! species also gain §G+15%§! Defense Army Health."
 
  trait_mol_social:0 "A"
  trait_mol_social_desc:0 "§La.§!"
@@ -611,7 +611,7 @@ mod_leader_scientists_unity_cost_mult:0 "Scientist £unity£ Unity Recruit cost"
 # Lithoid
  trait_tec_lithophytic:0 "Lithophytic Symbiosis"
  trait_tec_lithophytic_desc:0 "§LThis Lithoid species has a deep symbiotic relation with diverse mycelial and vegetal lifeforms, allowing the mutual benefit of protection and nourishment.§!"
- TRAIT_TEC_LITHOPHYTIC_EFFECT:0 "Each pop generates £food£ §Y0.15§! Food.\n\nIf a §EPlantoid§! species exist on the planet, this Lithoid species also gain §Y-10%§! Upkeep."
+ TRAIT_TEC_LITHOPHYTIC_EFFECT:0 "$mod_planet_pops_minerals_produces_add$: §G+0.15§!\n\nIf a §EPlantoid§! species exist on the planet, this Lithoid species also gain §G-10%§! Upkeep."
 
 
 
@@ -703,18 +703,18 @@ mod_leader_scientists_unity_cost_mult:0 "Scientist £unity£ Unity Recruit cost"
  mod_tec_trait_cybernetic_tooltip:0 "[tec_trait_cybernetic_module_block_1][tec_trait_cybernetic_module_block_2][tec_trait_cybernetic_submodule_block_1][tec_trait_cybernetic_submodule_block_2][tec_trait_cybernetic_leader_block]"
 
  # tec_blank
- tec_trait_cybernetic_module_fallback:0 "Army Damage: §G+15%§!\n"
- tec_trait_cybernetic_module_versatility:0 "$tec_loc_job_output$ per $tec_loc_capital_tier$: §G+3.5%§!\n"
- tec_trait_cybernetic_module_research:0 "$tec_loc_research_resources$ from $tec_loc_research_jobs$ per $tec_loc_capital_tier$: §G+0.15§!\n"
- tec_trait_cybernetic_module_industrial:0 "$tec_loc_industrial_resources$ from $tec_loc_industrial_jobs$ per $tec_loc_capital_tier$: §G+0.15§! \n"
+ tec_trait_cybernetic_module_fallback:0 "$MOD_ARMY_DAMAGE_MULT$: §G+15%§!\n"
+ tec_trait_cybernetic_module_versatility:0 "$mod_planet_jobs_produces_mult$ per $tec_loc_capital_tier$: §G+3.5%§!\n"
+ tec_trait_cybernetic_module_research:0 "$mod_planet_researchers_all_research_produces_add$ per $tec_loc_capital_tier$: §G+0.15§!\n"
+ tec_trait_cybernetic_module_industrial:0 "$mod_planet_industrial_jobs_all_industrial_produces_add$ per $tec_loc_capital_tier$: §G+0.15§!\n"
 
- tec_trait_cybernetic_submodule_fallback:0 "Leader Lifespan: §G+25 years§!\n"
+ tec_trait_cybernetic_submodule_fallback:0 "$MOD_LEADER_AGE$: §G+25 years§!\n"
  tec_trait_cybernetic_submodule_lifespan:0 "$tec_trait_cybernetic_submodule_fallback$"
- tec_trait_cybernetic_submodule_warfare:0 "Army Damage: §G+15%§!\n"
- tec_trait_cybernetic_submodule_survival:0 "Army Health: §G+20%§!\n"
- tec_trait_cybernetic_submodule_recycling:0 "Pop Upkeep: §G-10%§!\n"
- tec_trait_cybernetic_submodule_construction:0 "Planetary Build Speed per Pop: §G+1%§!\n"
- tec_trait_cybernetic_submodule_knowledge:0 "Leader Experience Gain: §G+25%§!\n"
+ tec_trait_cybernetic_submodule_warfare:0 "$MOD_ARMY_DAMAGE_MULT$: §G+15%§!\n"
+ tec_trait_cybernetic_submodule_survival:0 "$MOD_ARMY_HEALTH$: §G+20%§!\n"
+ tec_trait_cybernetic_submodule_recycling:0 "$mod_planet_pops_upkeep_mult$: §G-10%§!\n"
+ tec_trait_cybernetic_submodule_construction:0 "$mod_planet_building_build_speed_mult$ per Pop: §G+1%§!\n"
+ tec_trait_cybernetic_submodule_knowledge:0 "$MOD_SPECIES_LEADER_EXP_GAIN$: §G+25%§!\n"
 
  tec_trait_cybernetic_leader_fallback:0 "§GLeaders from this species have additional traits and bonuses§!"
  tec_trait_cybernetic_leader_versatility:0 "$tec_trait_cybernetic_leader_fallback$"
