--- a/localisation/english/zz_evolved_cui_l_english.yml
+++ b/localisation/english/zz_evolved_cui_l_english.yml
@@ -29,23 +29,34 @@
 
 # ---------------------------  SCRIPTED LOC  --------------------------------
 
- tec_energy_upk:0 "£energy£ §YEnergy§!"
- tec_minerals_upk:0 "£minerals£ §YMinerals§!"
- tec_food_upk:0 "£food£ §YFood§!"
- tec_alloys_upk:0 "£alloys£ §YAlloys§!"
+ tec_loc_energy:0 "£energy£ §YEnergy§!"
+ tec_loc_minerals:0 "£minerals£ §YMinerals§!"
+ tec_loc_food:0 "£food£ §YFood§!"
+ tec_loc_alloys:0 "£alloys£ §YAlloys§!"
+ tec_loc_consumer_goods:0 "£consumer_goods£ §YConsumer Goods§!"
+ tec_loc_unity:0 "£unity£ §YUnity§!"
 
- tec_and_energy_upk:0 "and £energy£ §YEnergy§!"
- tec_and_minerals_upk:0 "and £minerals£ §YMinerals§!"
- tec_and_food_upk:0 "and £food£ §YFood§!"
+ tec_loc_alloys_and_energy:0 "$tec_loc_alloys$ and $tec_loc_energy$"
+ tec_loc_alloys_and_minerals:0 "$tec_loc_alloys$ and $tec_loc_minerals$"
+ tec_loc_alloys_and_food:0 "$tec_loc_alloys$ and $tec_loc_food$"
 
- tec_alloys_and_energy_upk:0 "£alloys£ §YAlloys§! $tec_and_energy_upk$"
- tec_alloys_and_minerals_upk:0 "£alloys£ §YAlloys§! $tec_and_minerals_upk$"
- tec_alloys_and_food_upk:0 "£alloys£ §YAlloys§! $tec_and_food_upk$"
+ tec_loc_food_or_minerals:0 "$tec_loc_food$ or $tec_loc_minerals$"
 
- tec_food_or_minerals_upk:0 "£food£ £minerals£ §YResources§!"
- tec_basic_resources_upk:0 "£trigger_tec_basic_resources£ §YBasic Resources§!"
+ tec_loc_basic_resources:0 "£trigger_tec_basic_resources£ §YBasic Resources§!"
+ tec_loc_industrial_resources:0 "£alloys£ £consumer_goods£ §YIndustrial Resources§!"
+ tec_loc_research_resources:0 "£trigger_tec_research£ §YResearch§!" 
 
- 
+ tec_loc_industrial_jobs:0 "£job_foundry£ £job_artisan£ Industrial Jobs"
+ tec_loc_research_jobs:0 "$mod_base_planet_researchers$"
+ tec_loc_unity_jobs:0 "$mod_base_planet_administrators$"
+
+ tec_loc_job_output: "$planet_jobs_produces_mult$"
+
+ tec_loc_habitability: "£mod_habitability_floor_add£ Habitability"
+ tec_loc_capital_tier: "£building£ Capital Tier"
+
+ tec_loc_cannot reproduce: "§RCannot Reproduce Naturally§!"
+
  tec_blank:0 ""
 
 
