--- a/localisation/english/zz_evolved_l_english.yml
+++ b/localisation/english/zz_evolved_l_english.yml
@@ -1136,3 +1136,7 @@ trait_ruler_immortal_desc:0 "§LThis individual is blessed by Gods for Eternal R
 edict_immortal_ruler:0 "Declare Immortal Ruler"
 edict_immortal_ruler_desc:0 "Invoking this edict will claim our current Ruler as Immortal."
 
+
+ planet_districts_farming:0 "Agricultural Districts"
+ planet_districts_generator:0 "Generator Districts"
+ planet_districts_mining:0 "Mining Districts"
