--- a/localisation/english/!_evolved_to_do_l_english.yml
+++ b/localisation/english/!_evolved_to_do_l_english.yml
@@ -602,6 +602,9 @@
 
 # ------------------------------------------------- Megacities
  # Note: Not og civic but better putting these all together
+ # Just for the sake of convenience
+	building_tec_megacity:0 "Megacity"
+	building_tec_megacity_plural:0 "Megacities"
 # t1
  building_tec_megacity_standard_1:0 "Megacity"
  building_tec_megacity_standard_1_plural:0 "Megacities"
