--- a/localisation/english/zz_evolved_civics_l_english.yml
+++ b/localisation/english/zz_evolved_civics_l_english.yml
@@ -354,19 +354,19 @@ tec_civic_not_available:0 "£trigger_no£ §RThis civic is disabled due to bugs 
 
  civic_tec_quantum_alloys:0 "Quantic Forging"
  civic_tec_quantum_alloys_desc:0 "The use of quantum entanglement techniques during alloy refining processes provides superdense and efficient alloys, hyper-bonded at a sub-atomic level, by applying intense amounts of energy."
- civic_tooltip_tec_quantum_alloys_effects:0 "£job_foundry£ §Y$job_foundry_plural$§! swap half their £minerals£ §YMineral§! upkeep with £energy£ §YEnergy§!.\n£job_technician£ §Y$job_technician_plural$§! increase the output of Metallurgist jobs by §G0.5%§! each.\n\n§HThis bonus is disabled when a similar £job_foundry£ Foundry output boost is present.§!\n"
+ civic_tooltip_tec_quantum_alloys_effects:0 "£job_foundry£ §Y$job_foundry_plural$§! swap half their £minerals£ §YMineral§! upkeep with £energy£ §YEnergy§!.\n£job_technician£ §Y$job_technician_plural$§! increase the output of Metallurgist jobs by §G1%§! each.\n\n§HThis bonus is disabled when a similar £job_foundry£ Foundry output boost is present.§!\n"
 
- civic_tec_corporate_quantum_alloys:0 "$civic_tec_quantum_alloys$"
+ civic_tec_corporate_quantum_alloys:0 "Quantic Alloy-Profiteering"
  civic_tec_corporate_quantum_alloys_desc:0 "$civic_tec_quantum_alloys_desc$"
  civic_tooltip_tec_corporate_quantum_alloys_effects:0 "$civic_tooltip_tec_quantum_alloys_effects$"
 
  civic_tec_hive_quantum_alloys:0 "Quantic Moulding"
  civic_tec_hive_quantum_alloys_desc:0 "$civic_tec_quantum_alloys_desc$"
- civic_tooltip_tec_hive_quantum_alloys_effects:0 "£job_alloy_drone£ §YAlloy Drones§! swap half their £minerals£ §YMineral§! upkeep with £energy£ §YEnergy§!.\n£job_technician_drone£ §Y$job_technician_drone_plural$§! increase the output of Alloy Drones by §G0.5%§! each.\n\n§HThis bonus is disabled when a similar £job_foundry£ Alloy Drone output boost is present.§!\n"
+ civic_tooltip_tec_hive_quantum_alloys_effects:0 "£job_alloy_drone£ §YAlloy Drones§! swap half their £minerals£ §YMineral§! upkeep with £energy£ §YEnergy§!.\n£job_technician_drone£ §Y$job_technician_drone_plural$§! increase the output of Alloy Drones by §G1%§! each.\n\n§HThis bonus is disabled when a similar £job_foundry£ Alloy Drone output boost is present.§!\n"
 
  civic_tec_machine_quantum_alloys:0 "Quantic Meta-Fabrication"
  civic_tec_machine_quantum_alloys_desc:0 "$civic_tec_quantum_alloys_desc$"
- civic_tooltip_tec_machine_quantum_alloys_effects:0 "£job_fabricator£ §YFabricators§! swap half their £minerals£ §YMineral§! upkeep with £energy£ §YEnergy§!.\n£job_technician_drone£ §Y$job_technician_drone_plural$§! increase the output of Fabricators by §G0.5%§! each.\n\n§HThis bonus is disabled when a similar £job_foundry£ Fabricator output boost is present.§!\n"
+ civic_tooltip_tec_machine_quantum_alloys_effects:0 "£job_fabricator£ §YFabricators§! swap half their £minerals£ §YMineral§! upkeep with £energy£ §YEnergy§!.\n£job_technician_drone£ §Y$job_technician_drone_plural$§! increase the output of Fabricators by §G1%§! each.\n\n§HThis bonus is disabled when a similar £job_foundry£ Fabricator output boost is present.§!\n"
 
 # /
 
