Text, indentation, space changes, etc

--- a/localisation/english/zz_evolved_modifiers_l_english.yml
+++ b/localisation/english/zz_evolved_modifiers_l_english.yml
@@ -287,24 +287,21 @@
 #MACHINERF
 # = = = = = = = = = = = = = = = = = = = = = = = = 
  pm_tec_unoptimized_80_modifier:0 "Severed efficiency"
- pm_tec_unoptimized_80_modifier_desc:0 "We still have design flaws inherited from our original creators. Efficiency is seriously reduced until we can be able to overcome that handicap. \n \nOur interfaces work at §R 80% efficiency §."
+ pm_tec_unoptimized_80_modifier_desc:0 "We still have design flaws inherited from our original creators. Efficiency is seriously reduced until we can be able to overcome that handicap.\n\nOur interfaces work at §R80% efficiency§."
  
  pm_tec_unoptimized_90_modifier:0 "Severed efficiency"
- pm_tec_unoptimized_90_modifier_desc:0 "Our interfaces are now partially adapted to new codes and optimizations, but new subroutines should be implemented.  \n \nOur interfaces work at §Y 85% efficiency §."
+ pm_tec_unoptimized_90_modifier_desc:0 "Our interfaces are now partially adapted to new codes and optimizations, but new subroutines should be implemented.\n\nOur interfaces work at §Y85% efficiency§."
  
  pm_tec_unoptimized_95_modifier:0 "Near-Optimal efficiency"
- pm_tec_unoptimized_95_modifier_desc:0 "With some readjustments, interfaces now reacts better to the new coding, we are close to achieving a complete system overhaul.  \n \nOur interfaces work at §G 95% efficiency §."
+ pm_tec_unoptimized_95_modifier_desc:0 "With some readjustments, interfaces now reacts better to the new coding, we are close to achieving a complete system overhaul.\n\nOur interfaces work at §G95% efficiency§."
  
  pm_tec_unoptimized_100_modifier:0 "Total efficiency"
- pm_tec_unoptimized_100_modifier_desc:0 "All units operational.  \n \nAll machine interfaces work at §B 100% efficiency §."
- 
- 
+ pm_tec_unoptimized_100_modifier_desc:0 "All units operational.\nnAll machine interfaces work at §B100% efficiency§."
 
 # -	Free modification - 
  modifier_tec_free_modification:0 "Embracing Change"
  modifier_tec_free_modification_desc:0 "§EChanges require sacrifices, but the effort done requires fast and effective movements to ensure our future.§!"
- 
- 
+
 # = = = = = = = = = = = = = = = = = = = = = = = = 
 #TERRAFORM
 # = = = = = = = = = = = = = = = = = = = = = = = = 
