Small loc changes

--- a/localisation/english/zz_evolved_building_jobs_megas_l_english.yml
+++ b/localisation/english/zz_evolved_building_jobs_megas_l_english.yml
@@ -2422,8 +2422,11 @@ tec_jump_empty:0 "\n\n"
 # DISTRICTS
 # ---------------------------------------------------------------
 # ------------------------------------------------- Text
- tec_planet_spec_change_jobs:0 "§YColony designation§! alters the jobs provided by this district.\n\n"
- tec_planet_spec_change_jobs_and_upkeep:0 "§YColony designation§! alters the jobs and £strategic£ upkeep provided by this district.\n\n"
+ tec_planet_spec_change_jobs_building:0 "The §YPlanet Designation§! alters the jobs provided by this £building£ Building.\n\n"
+ tec_planet_designation_change_jobs_and_upkeep_building:0 "The §YPlanet Designation§! alters the jobs provided and £strategic£ Upkeep of this £building£ Building.\n\n"
+
+ tec_planet_spec_change_jobs_district:0 "The §YPlanet Designation§! alters the jobs provided by this £district£ District.\n\n"
+ tec_planet_designation_change_jobs_and_upkeep_district:0 "The §YPlanet Designation§! alters the jobs provided and £strategic£ Upkeep of this £district£ District.\n\n"
 
  tec_useless_without_upgrading_planet_jobs:0 "This district is less effective than §YPlanet Specialization§! focused versions; buildings or designations won't make any effect. You can upgrade your planet with §YPlanetary Decisions§!.\n\n"
 
